# term-cat

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs  main.rs  newtype.rs
src/agent/: accumulator.rs  builtin.rs  channel_filter.rs  event.rs  loop_state.rs  mod.rs  streaming.rs
src/bridge/: cancel.rs  channel.rs  mod.rs
src/provider/: local_openai.rs  mod.rs
src/sse/: mod.rs  parser.rs
src/tui/: app.rs  frame.rs  history.rs  input.rs  key.rs  mod.rs  render.rs
src/wire/: chunk.rs  message.rs  mod.rs  request.rs  response.rs
tests/: accumulator.rs  builtin_tools.rs  key_mapping.rs  wire_chunk.rs
tests/common/: mod.rs
